Update index.html link line of c++

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </div>
             </div>
 
-            <div class="skills-card">
+            <!--<div class="skills-card">
                 <div class="skills-image">
                     <img src="images/_C++.png" />
                 </div>
@@ -99,10 +99,10 @@
                         Algorithms and Problems Solving</p>
                     <strong class="skills-title">
                         <span>Programming Advices Certificate</span>
-                        <!-- <a href="#" class="more-details">More details</a> -->
+                        <a href="#" class="more-details">More details</a> 
                     </strong>
                 </div>
-            </div>
+            </div>-->
 
             <div class="skills-card">
                 <div class="skills-image">
