--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <img src="images/Barber.png" />
                 </div>
                 <div class="skills-info">
-                    <p class="skills-category">Grèce-Thessalonique Stage</p>
+                    <p class="skills-category">Greece-Thessaloniki Internship</p>
                     <strong class="skills-title">
                         <span>Barber</span>
                         <!-- <a href="#" class="more-details">More details</a> -->
@@ -203,9 +203,9 @@
     <footer class="footer">
         <p class="footer-title">Copyrights @ <span>Abdulrahman MOHAMMAD</span></p>
         <div class="social-icons">
-            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <!--<a href="#"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>-->
             <a href="https://www.youtube.com/@ZeroCodMath" target="_blank"><i class="fab fa-youtube"></i></a>
         </div>
     </footer>
