--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="aboutme">
                 <div class="aboutme-header"> <h2>Hobbies:</h2> </div>
                         
-                        <p>📚 I love learning about cybersecurity and artificial intelligence.</p>
+                        <p>📚 I love learning about technology and its developments.</p>
                         <p>🌍 I’m curious about different cultures and languages..</p>
                         <p>⚙️ In my free time, I practice calisthenics, explore new tech trends.</p>
                         <p>🎯 My ultimate goal is to create impactful digital solutions that transform everyday life.</p>
