--- a/index.html
+++ b/index.html
@@ -169,8 +169,7 @@
                     <img src="images/MyLogo1.png" />
                 </div>
                 <div class="skills-info">
-                    <p class="skills-category">Teaching Math and programming courses on YouTube to make learning accessible and engaging
-                        my channel name "ZeroCodMath".</p>
+                    <p class="skills-category">Teaching math and programming on YouTube to make learning simple and engaging.</p>
                     <strong class="skills-title">
                         <span>Content Creator</span>
                         <a href="https://www.youtube.com/@ZeroCodMath" target="_blank" class="more-details">More details</a>
