--- a/index.html
+++ b/index.html
@@ -73,6 +73,22 @@
     <section class="skills" id="skills">
         <h2 class="title">Skills</h2>
         <div class="content">
+
+            <!-- Youtube part -->
+            <div class="skills-card">
+                <div class="skills-image">
+                    <img src="images/MyLogo1.png" />
+                </div>
+                <div class="skills-info">
+                    <p class="skills-category">Teaching math and programming on YouTube to make learning simple and engaging.</p>
+                    <strong class="skills-title">
+                        <span>Content Creator</span>
+                        <a href="https://www.youtube.com/@ZeroCodMath" target="_blank" class="more-details">More details</a>
+                    </strong>
+                </div>
+            </div>
+
+
             <div class="skills-card">
                 <div class="skills-image">
                     <img src="images/IT-Skills.png" />
@@ -81,7 +97,6 @@
                     <p class="skills-category">
                         <ul class="ul-skills-category">
                             <li class="li-skills-category">Word, Excel, PowerPoint</li>
-                            <li class="li-skills-category">Gmail Management</li>
                             <li class="li-skills-category">Basic IT Tools</li>
                         </ul>
                     </p>
@@ -114,28 +129,11 @@
                 </div>
             </div>
 
-           
-
-
-            <!-- Youtube part -->
-            <div class="skills-card">
-                <div class="skills-image">
-                    <img src="images/MyLogo1.png" />
-                </div>
-                <div class="skills-info">
-                    <p class="skills-category">Teaching math and programming on YouTube to make learning simple and engaging.</p>
-                    <strong class="skills-title">
-                        <span>Content Creator</span>
-                        <a href="https://www.youtube.com/@ZeroCodMath" target="_blank" class="more-details">More details</a>
-                    </strong>
-                </div>
-            </div>
-
 
 <!-- General Skills -->
             <div class="skills-card">
                 <div class="skills-image">
-                    <img src="images/GastronomicService.jpg" />
+                    <img src="images/OTHERS_1280x720.png" />
                 </div>
                 <div class="skills-info">
                     <p class="skills-category">
