--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h2 class="title">About me</h2>
         <div class="aboutme-content">
             <div class="aboutme">
-                <p>Hi, I'm Abdulrahman Mohammad, a 21-year-old student pursuing a degree in Applied Information 
+                <p>Hi, I'm Abdulrahman Mohammad, a 22-year-old student pursuing a degree in Applied Information 
                     Technology at the University of Luxembourg, where I began my studies in 2023. I am passionate about
                      technology and always eager to explore innovative solutions.</p>  
             </div>
@@ -96,12 +96,13 @@
                 <div class="skills-info">
                     <p class="skills-category">
                         <ul class="ul-skills-category">
-                            <li class="li-skills-category">Word, Excel, PowerPoint</li>
-                            <li class="li-skills-category">Basic IT Tools</li>
+                            <li class="li-skills-category">MS Office Tools</li>
+                            <li class="li-skills-category">Git & GitHub</li>
+                            <li class="li-skills-category">MySQL</li>
                         </ul>
                     </p>
                     <strong class="skills-title">
-                        <span>IT Skills for the Job Market</span>
+                        <span>IT Skills</span>
                         <!-- <a href="#" class="more-details">More details</a> -->
                     </strong>
                 </div>
